<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fighter.quickstop.publish.PublishAddLocationActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.baidu.mapapi.map.MapView
            android:id="@+id/add_location_mapView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:clickable="true">
        </com.baidu.mapapi.map.MapView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="@dimen/activity_left_margin"
            android:layout_marginRight="@dimen/activity_left_margin"
            android:layout_marginTop="@dimen/activity_twenty_margin">
            <EditText
                android:id="@+id/add_location_searchtext"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:background="@color/colorToolbarWhite"
                android:lines="1"
                android:hint="@string/hint_publish_add_location_search"
                android:layout_height="35dp"/>
            <Button
                android:id="@+id/add_location_searchbtn"
                android:layout_weight="5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="3px"
                android:textSize="@dimen/text_middle"
                android:textColor="@color/colorTextBlack"
                android:background="@drawable/normal_btn_white"
                android:text="@string/text_publish_add_location_search"
                android:layout_gravity="right"/>
        </LinearLayout>

        <Button
            android:id="@+id/add_location_makesurebtn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="@string/text_publish_add_location_sure"
            android:layout_gravity="bottom|right"
            android:textColor="@color/colorEditWhite"
            android:background="@drawable/circular_btn_blue"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:visibility="gone"/>

    </FrameLayout>





</LinearLayout>
