<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:background="@color/colorBackgroundItem"
    android:id="@+id/pop_repeat_choice">

    <!--<LinearLayout-->
        <!--android:id="@+id/linear_choice_all"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@drawable/linear_background_press"-->
        <!--android:orientation="horizontal">-->
        <!--<TextView-->
            <!--android:layout_weight="1"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/choice_all"-->
            <!--android:layout_marginTop="@dimen/activity_twenty_margin"-->
            <!--android:layout_marginBottom="@dimen/activity_twenty_margin"-->
            <!--android:paddingLeft="25dp"-->
            <!--android:layout_gravity="center_vertical"-->
            <!--android:textSize="@dimen/text_large"-->
            <!--android:textColor="@color/colorTextBlack"/>-->
        <!--<CheckBox-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:button="@drawable/checkbox_choose"-->
            <!--android:layout_marginRight="@dimen/activity_horizontal_margin"-->
            <!--android:gravity="right"-->
            <!--android:layout_gravity="center"-->
            <!--android:id="@+id/choice_all" />-->
    <!--</LinearLayout>-->
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/colorListDivider"/>
    <LinearLayout
        android:id="@+id/linear_choice_monday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linear_background_press"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_monday"
            android:layout_marginTop="@dimen/activity_twenty_margin"
            android:layout_marginBottom="@dimen/activity_twenty_margin"
            android:paddingLeft="20dp"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/text_middle"
            android:textColor="@color/colorTextBlack"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/checkbox_choose"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="right"
            android:layout_gravity="center"
            android:id="@+id/choice_monday" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/colorListDivider"/>
    <LinearLayout
        android:id="@+id/linear_choice_tuesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linear_background_press"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_tuesday"
            android:layout_marginTop="@dimen/activity_twenty_margin"
            android:layout_marginBottom="@dimen/activity_twenty_margin"
            android:paddingLeft="20dp"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/text_middle"
            android:textColor="@color/colorTextBlack"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="right"
            android:layout_gravity="center"
            android:background="@drawable/checkbox_choose"
            android:id="@+id/choice_tuesday" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/colorListDivider"/>
    <LinearLayout
        android:id="@+id/linear_choice_wednesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linear_background_press"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_wednesday"
            android:layout_marginTop="@dimen/activity_twenty_margin"
            android:layout_marginBottom="@dimen/activity_twenty_margin"
            android:paddingLeft="20dp"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/text_middle"
            android:textColor="@color/colorTextBlack"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="right"
            android:layout_gravity="center"
            android:background="@drawable/checkbox_choose"
            android:id="@+id/choice_wednesday" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/colorListDivider"/>
    <LinearLayout
        android:id="@+id/linear_choice_thursday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linear_background_press"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_thursday"
            android:layout_marginTop="@dimen/activity_twenty_margin"
            android:layout_marginBottom="@dimen/activity_twenty_margin"
            android:paddingLeft="20dp"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/text_middle"
            android:textColor="@color/colorTextBlack"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="right"
            android:layout_gravity="center"
            android:background="@drawable/checkbox_choose"
            android:id="@+id/choice_thursday" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/colorListDivider"/>
    <LinearLayout
        android:id="@+id/linear_choice_friday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linear_background_press"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_friday"
            android:layout_marginTop="@dimen/activity_twenty_margin"
            android:layout_marginBottom="@dimen/activity_twenty_margin"
            android:paddingLeft="20dp"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/text_middle"
            android:textColor="@color/colorTextBlack"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="right"
            android:layout_gravity="center"
            android:background="@drawable/checkbox_choose"
            android:id="@+id/choice_friday" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/colorListDivider"/>
    <LinearLayout
        android:id="@+id/linear_choice_saturday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linear_background_press"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_saturday"
            android:layout_marginTop="@dimen/activity_twenty_margin"
            android:layout_marginBottom="@dimen/activity_twenty_margin"
            android:paddingLeft="20dp"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/text_middle"
            android:textColor="@color/colorTextBlack"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="right"
            android:layout_gravity="center"
            android:background="@drawable/checkbox_choose"
            android:id="@+id/choice_saturday" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/colorListDivider"/>
    <LinearLayout
        android:id="@+id/linear_choice_sunday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linear_background_press"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_sunday"
            android:layout_marginTop="@dimen/activity_twenty_margin"
            android:layout_marginBottom="@dimen/activity_twenty_margin"
            android:paddingLeft="20dp"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/text_middle"
            android:textColor="@color/colorTextBlack"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="right"
            android:layout_gravity="center"
            android:background="@drawable/checkbox_choose"
            android:id="@+id/choice_sunday" />
    </LinearLayout>
</LinearLayout>
