<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/linear_publish_add"
    tools:context=".publish.PublishAddActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/publish_add_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorToolbarWhite"
        app:theme="@style/ThemeOverlay.AppCompat.Light"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_large"
            android:text="@string/toolbar_publish_add_title"
            android:textColor="@color/colorTextBlack"
            android:layout_gravity="center"
            android:id="@+id/code_title"/>
        <Button
            android:id="@+id/add_preserve"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/text_middle"
            android:background="@drawable/toolbar_btn"
            android:textColor="@color/colorTextBlack"
            android:text="@string/toolbar_publish_add_preserve"
            android:layout_gravity="end"/>

    </android.support.v7.widget.Toolbar>
    <View
    android:layout_width="match_parent"
    android:layout_height="1px"
    android:background="@color/colorToolbarBlack"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:background="#f2f3f4">
                <LinearLayout
                    android:layout_weight="1"
                    android:id="@+id/layout_addimage1"
                    android:layout_marginTop="@dimen/activity_top_margin"
                    android:layout_marginBottom="@dimen/activity_top_margin"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="100dp">
                    <ImageView
                        android:id="@+id/add_addimage1"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/add"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:id="@+id/layout_addimage2"
                    android:layout_marginTop="@dimen/activity_top_margin"
                    android:layout_marginBottom="@dimen/activity_top_margin"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="100dp"
                    android:visibility="gone">
                    <ImageView
                        android:id="@+id/add_addimage2"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/add"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:id="@+id/layout_addimage3"
                    android:layout_marginTop="@dimen/activity_top_margin"
                    android:layout_marginBottom="@dimen/activity_top_margin"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="100dp"
                    android:visibility="gone">
                    <ImageView
                        android:id="@+id/add_addimage3"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/add"/>
                </LinearLayout>


            </LinearLayout>
            <!--<View-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="3px"-->
                <!--android:background="@color/colorBackgroundList"/>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TimePicker
                        android:id="@+id/add_begintime"
                        android:theme="@style/TimePickMySelf"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"></TimePicker>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="@dimen/text_large"
                    android:layout_gravity="center"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TimePicker
                        android:id="@+id/add_endtime"
                        android:theme="@style/TimePickMySelf"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"></TimePicker>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3px"
                android:background="@color/colorBackgroundList"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:paddingLeft="@dimen/activity_left_margin"
                android:paddingRight="@dimen/activity_left_margin"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/linear_repeat"
                    android:layout_weight="4"
                    android:background="@drawable/linear_background_press"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left"
                        android:text="@string/text_publish_add_repeat"
                        android:textSize="@dimen/text_middle"
                        android:textColor="@color/colorTextBlack"/>
                    <TextView
                        android:id="@+id/add_repeat"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|right"
                        android:textSize="@dimen/text_little"
                        android:text="周一、周二"
                        android:layout_weight="1"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|right"
                        android:layout_weight="5"
                        android:src="@drawable/right_arrow"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2px"
                    android:background="@color/colorBackgroundList"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/linear_location"
                    android:background="@drawable/linear_background_press"
                    android:layout_weight="4">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left"
                        android:text="@string/text_publish_add_location"
                        android:textSize="@dimen/text_middle"
                        android:textColor="@color/colorTextBlack"/>
                    <TextView
                        android:id="@+id/add_location"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|right"
                        android:textSize="@dimen/text_little"
                        android:text="中国石油大学"
                        android:layout_weight="1"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|right"
                        android:layout_weight="5"
                        android:src="@drawable/right_arrow"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2px"
                    android:background="@color/colorBackgroundList"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left"
                        android:text="@string/text_publish_add_price"
                        android:textSize="@dimen/text_middle"
                        android:textColor="@color/colorTextBlack"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="80dp">
                        <EditText
                            android:id="@+id/add_price"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:layout_marginTop="@dimen/activity_top_margin"
                            android:layout_marginBottom="@dimen/activity_top_margin"
                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
                            android:layout_marginRight="@dimen/activity_left_margin"
                            android:background="@color/colorEditWhite"
                            android:singleLine="true"
                            android:gravity="end|center_vertical"
                            android:numeric="signed"
                            android:imeOptions="actionDone"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_weight="5"
                            android:text="元/小时"
                            android:textSize="@dimen/text_middle"/>
                    </LinearLayout>

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2px"
                    android:background="@color/colorBackgroundList"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left"
                        android:text="@string/text_publish_add_discribe"
                        android:textSize="@dimen/text_middle"
                        android:textColor="@color/colorTextBlack"/>
                    <EditText
                        android:id="@+id/add_discribe"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/activity_top_margin"
                        android:layout_marginBottom="@dimen/activity_top_margin"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:gravity="left"
                        android:layout_marginRight="@dimen/activity_left_margin"
                        android:textSize="15sp"
                        android:hint="@string/hint_publish_add_discribe"
                        android:background="@color/colorEditWhite"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>



</LinearLayout>
